--- a/light-haskell.cabal
+++ b/light-haskell.cabal
@@ -60,7 +60,8 @@ executable light-haskell
     aeson ==0.7.*,
     process >=1.1,
     ghc-mod >=5.1,
-    stylish-haskell ==0.5.*
+    stylish-haskell ==0.5.*,
+    haskell-src-exts ==1.14.*
 
   -- Directories containing source files.
   hs-source-dirs:      haskell
